Site section mobile fix

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -26,6 +26,9 @@ position: absolute;
 width: 100%;
 z-index: 10;
 }
+.left h2 {
+padding-left: 19px;
+}
 .left .site-filter {
 margin-left: 4px;
 position: relative;
